UI till dashboard

--- a/src/pages/Register/Signup1/style.module.css
+++ b/src/pages/Register/Signup1/style.module.css
@@ -14,8 +14,31 @@
     font-weight: bold;
     font-size: 33px;
     line-height: 40px;
-    width: 274px;
     display: flex;
+}
+.footerText{
+    font-size: 13px;
+    justify-content: space-between;
+    display: flex;
+}
+.rightData{
+    min-width: 208px;
+    padding-left: 21px;
+}
+.subdomain{
+    height: 34px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 54px;
+    background: linear-gradient(180deg, rgba(235, 238, 240, 0.4) 0%, rgba(207, 207, 212, 0.4) 100%);
+border-radius: 2px;
+}
+.remindme{
+    color: #183247;
+}
+.forgot{
+    color: #239CFF;
 }
 .subText{
     height: 32px;
@@ -42,9 +65,6 @@ margin: 40px 0 0 0;
     justify-content: center;
     cursor: pointer;
 
-}
-.input{
-    width: 365px !important;
 }
 .label{
     
