--- a/src/pages/ConfirmEmail/styles.module.css
+++ b/src/pages/ConfirmEmail/styles.module.css
@@ -14,7 +14,6 @@
     font-weight: bold;
     font-size: 33px;
     line-height: 40px;
-    width: 274px;
     display: flex;
 }
 .subText{
@@ -43,9 +42,6 @@ margin: 40px 0 0 0;
     cursor: pointer;
 
 }
-.input{
-    width: 365px !important;
-}
 .label{
     
 font-family: Open Sans;
@@ -57,4 +53,12 @@ line-height: 18px;
 margin: 40px 0 0 0;
 display: block;
 color: #A1A6A9;
+}
+.otpInput{
+    height: 45px !important;
+    width: 45px !important;
+    border: 0.5px solid #A1A6A9;
+border-radius: 2px;
+margin-right: 15px;
+margin-top: 15px;
 }
